...

        <com.admiral.uikit.components.appbar.Appbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@+id/defaultTab">

            <com.admiral.uikit.components.tabs.StandardTab
...

            <com.admiral.uikit.components.tabs.StandardTab
                android:id="@+id/disabledTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@+id/tabOne2">

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabTwo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@+id/tabOne3">

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabTwo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabThree3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@+id/tabOne4">

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabTwo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabThree4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabFour4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@+id/tabOne5">

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabTwo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabThree5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabFour5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabFive5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x4"
            app:checkedId="@+id/tabNotification">

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabNotification2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <com.admiral.uikit.components.tabs.UnderlineSliderTab
                android:id="@+id/tabNotificationAdditional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
