...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/module_x4"
            android:text="@string/tabs_title"
            app:admiralTextStyle="largetitle1" />

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnStandardTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/module_x6"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnLogoTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnInformerTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnOutlineTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnUnderlineTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
                app:admiralCellUnitType="trailing"
                app:admiralIcon="@drawable/admiral_ic_chevron_right_outline" />

        </com.admiral.uikit.components.cell.BaseCell>

        <com.admiral.uikit.components.cell.BaseCell
            android:id="@+id/btnIconTabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/module_x4"
            android:paddingTop="@dimen/module_x3"
            android:paddingEnd="@dimen/module_x4"
            android:paddingBottom="@dimen/module_x3">
...
